--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,50 @@
-# Dependencies
-node_modules/
-.pnpm-debug.log*
-yarn-error.log
-package-lock.json
+# Editor / IDE
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea/
+*.swp
+*.swo
 
-# Build
-dist/
-build/
-
-# Misc
+# OS
 .DS_Store
-.env
-.env.local
-.env.*.local
+.AppleDouble
+.LSOverride
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+logs/
 *.log
 
-# IDEs
-.vscode/
-.idea/
+# Dependency Directories
+node_modules/
+jspm_packages/
+.pnpm-store/
+
+# Build / Dist
+dist/
+build/
+out/
+coverage/
+.next/
+.nuxt/
+.cache/
+.parcel-cache/
+
+# Environment Variables
+.env
+.env.test
+.env.production
+.env.local
+.env.*.local
+
+# Docker
+docker-compose.override.yml
+
+# Testing
+playwright-report/
+test-results/
